package cursus;

public enum Modalite {
    EXAMEN_ECRIT, ORAL, QCM, ORDINATEUR, PROJET, TP
}
